--- a/app.json
+++ b/app.json
@@ -43,7 +43,7 @@
       "notify": false
     },
     {
-      "title": "Welcome to SideStore
+      "title": "Welcome to SideStore"
       "identifier": "welcome-to-sidestore",
       "caption": "Please read the FAQ for help with installing apps.",
       "tintColor": "018084",
