--- a/app.json
+++ b/app.json
@@ -124,7 +124,7 @@
       "notify": true
     },
     {
-      "title": "e",
+      "title": "e!",
       "identifier": "no",
       "caption": "never gonna",
       "tintColor": "FFFFFF",
