--- a/app.json
+++ b/app.json
@@ -187,7 +187,7 @@
       "notify": true
     },
     {
-      "title": "Sideloading is Here!",
+      "title": "Sideloading ins Here!",
       "identifier": "sideloading-is-here",
       "caption": "Update to AltStore 1.3 to install any app directly from Files.",
       "tintColor": "018084",
