--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
       "title": "e",
       "identifier": "no",
       "caption": "never gonna",
-      "tintColor": "#8043F0",
+      "tintColor": "018084",
       "imageURL": "https://variety.com/wp-content/uploads/2021/07/Rick-Astley-Never-Gonna-Give-You-Up.png?w=681&h=383&crop=1",
       "url": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
       "date": "2022-05-05",
