Change destination url

--- a/apps.json
+++ b/apps.json
@@ -1,7 +1,7 @@
 {
   "name": "SideStore Offical",
   "identifier": "com.SideStore.AltStore",
-  "sourceURL": "https://raw.githubusercontent.com/Spidy123222/apps.json/main/app.json",
+  "sourceURL": "https://apps.sidestore.io/",
   "apps": [
     {
       "name": "Altstore",
