--- a/apps.json
+++ b/apps.json
@@ -5,14 +5,14 @@ redirect_from:
 ---
 {
   "name": "SideStore Offical",
-  "identifier": "com.SideStore.AltStore",
+  "identifier": "com.SideStore.SideStore",
   "sourceURL": "https://apps.sidestore.io/",
   "apps": [
     {
-      "name": "Altstore",
-      "bundleIdentifier": "com.SideStore.AltStore",
+      "name": "SideStore",
+      "bundleIdentifier": "com.SideStore.SideStore",
       "developerName": "Side Team",
-      "version": "1.5.2b",
+      "version": "1.0.0",
       "versionDate": "2022-07-14T12:00:00-05:00",
       "versionDescription": "Welcome to the pacer test.",
       "downloadURL": "https://cdn.altstore.io/file/altstore/apps/altstore/1_5_1.ipa",
@@ -73,7 +73,7 @@ redirect_from:
       "identifier": "updated-faq",
       "caption": "Check out our updated guide to learn how to sideload apps!",
       "tintColor": "8043FF",
-      "url": "https://faq.altstore.io",
+      "url": "https://faq.sidestore.io",
       "date": "2050-07-28",
       "notify": false
     }
