--- a/apps.json
+++ b/apps.json
@@ -9,7 +9,7 @@
       "developerName": "SideStore Team",
       "version": "0.1.1",
       "versionDate": "2022-011-22T12:00:00-05:00",
-      "versionDescription": "Welcome to the next generation of sideloading! This update fixes and adds the following:\n\nâ€¢ Officially adds ability to pair via a mobiledevicepairing and a plist file.\nâ€¢ Changes patreon page.\nâ€¢ fixes GroupID staging issues.\nâ€¢ Fixes refreshing SideStore creating a second app or fails refreshing.",
+      "versionDescription": "Welcome to the next generation of sideloading! This update fixes and adds the following:\n\n - Officially adds ability to pair via a mobiledevicepairing and a plist file.\n\n - Changes patreon page. fixes GroupID staging issues.\n\n - Fixes refreshing SideStore creating a second app or fails refreshing.",
       "downloadURL": "https://nythepegasus.com/SideStore.ipa",
       "localizedDescription": "SideStore is an alternative app store for non-jailbroken devices. \n\nSideStore allows you to sideload other .ipa files and apps from the Files app or via the SideStore Library",
       "iconURL": "https://raw.githubusercontent.com/SideStore/apps.json/main/105070799.jpeg",
