--- a/apps.json
+++ b/apps.json
@@ -1,7 +1,3 @@
----
-title: JSON Source
-permalink: /
----
 {
   "name": "SideStore Offical",
   "identifier": "com.SideStore.SideStore",
@@ -12,6 +8,13 @@ permalink: /
       "bundleIdentifier": "com.SideStore.SideStore",
       "developerName": "SideStore Team",
       "versions": [
+        {
+          "version": "1.0.0-rc.1",
+          "date": "2022-012-22T12:00:00-05:00",
+          "localizedDescription": "test.",
+          "downloadURL": "https://github.com/SideStore/SideStore/releases/download/0.1.1/SideStore.ipa",
+          "size": 5465976
+        },
         {
           "version": "0.1.1",
           "date": "2022-011-22T12:00:00-05:00",
