Make simple and functional - Remove jekyll-redirect-from - Only use jekyll permalink in json file - Remove index and navigation pages, not needed - 404 page contains no markdown, renamed .md to .html - Renamed apps.json to index.json, as that's what the permalink names it - index.json pulls actual json from new _includes/source.json - Changes to source will happen at _includes/source.json now

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-plugins:
-  - jekyll-redirect-from
+title: SideStore Official Source
+description: The home of SideTeam apps
+url: "https://apps.sidestore.io"
 
-whitelist:
-  - jekyll-redirect-from
+exclude:
+  - "LICENSE"
+  - "README.md"
