--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -11,9 +11,9 @@ on:
   #schedule:
   #  - cron: "0 0 * * *"
   # Runs on pushes and prs targeting the default branch
-  push:
-    branches: ["main"]
-  pull_request:
+  #push:
+  #  branches: ["main"]
+  #pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,10 +34,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Verify JSON # Checks the sourcejson file but not the index.json
-        uses: limitusus/json-syntax-check@v2.0.0
-        with:
-          pattern: "/_includes/.json"
+      #- name: Verify JSON # Checks the sourcejson file but not the index.json
+      #  uses: limitusus/json-syntax-check@v2.0.0
+      #  with:
+      #    pattern: "\\.json$"
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Ruby
