Only run jsoncheck on dispatch
Needs fixed

--- a/.github/workflows/jsoncheck.yml
+++ b/.github/workflows/jsoncheck.yml
@@ -1,10 +1,11 @@
 name: JSON check
 
 on:
-  push:
-    paths:
-      - '_includes/source.json'
-  pull_request:
+  #push:
+  #  paths:
+  #    - '_includes/source.json'
+  #pull_request:
+  workflow_dispatch:
 
 jobs:
   test:
